--- a/users/templates/main/home.html
+++ b/users/templates/main/home.html
@@ -60,7 +60,7 @@ document.getElementById('login-form').addEventListener('submit', async function(
 
         // Redirect or load protected page after login
         setTimeout(() => {
-            window.location.href = '/pokemon';  // Or wherever
+            window.location.href = '/pokemon/home/';  // Or wherever
         }, 1000);
 
     } catch (error) {
